# daily-receipt-printing

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  notes.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENT_INSTRUCTIONS.md  CRON.md
docs/2026-06-21-initial-design/: DESIGN.md  TASKS.md
receipts/: patrick.json  test.json
src/core/: actions.py  config.py  context.py  engine.py  layout.py  log_config.py  main.py  preview.py  printer.py  runner.py
src/widgets/: __init__.py  bicimad.py  calendar.py  fun_fact.py  hello.py  weather.py  widget.py
tests/: conftest.py  test_e2e_snapshot.py
tests/core/: test_actions.py  test_config.py  test_context.py  test_engine.py  test_layout.py  test_log_config.py  test_main.py  test_preview.py  test_printer.py  test_runner.py
tests/snapshots/: test_receipt.json  test_receipt_bytes.hex
tests/widgets/: test_bicimad.py  test_calendar.py  test_fun_fact.py  test_weather.py  test_widget.py
